# estimator

./: .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml
database/: README.md
database/migrations/: 0002_companies_and_membership.sql  0003_core_schema.sql  0004_rls_policies.sql  0005_storage_bucket.sql  0006_restrict_auth_company_ids_execute.sql  0007_search_line_items.sql  0008_set_search_line_items_search_path.sql  0009_estimates.sql  0010_data_safety_fixes.sql  0011_estimates_project_optional.sql  0012_document_content_hash.sql  0013_unique_names.sql  0014_document_rejected_status.sql  0015_estimate_line_soft_delete.sql  0016_estimate_versions.sql  0017_signatures.sql  0018_change_order_pdf.sql  0019_notifications.sql  0020_credentials.sql  0021_vendor_price_check.sql
docs/: architecture.md  data_model.md  implementation_plan.md  product-mvp.md  product.md
docs/mvp/: implementation_plan.md
docs/v2/: 00-overview.md  01-change-orders-compliance.md  02-contractor-verification.md  03-marketplace.md  04-project-templates.md  05-vendor-price-check.md
docs/v2/plans/: 00-roadmap.md  01-change-orders-plan.md  (+2 more)
example-receipts/: test.heic
web/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
workers/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
workers/estimator_workers/: celery_app.py  change_order_pdf.py  config.py  credential_extraction.py  emails.py  events.py  extraction.py  matching.py  supabase_client.py  tasks.py  vendor_price.py
workers/scripts/: dump_vendor_page.py
(+95 files in other folders)
