[project]
name = "estimator-workers"
version = "0.1.0"
description = "Python/Celery extraction pipeline workers for Estimator"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["estimator_workers*"]
