[project]
name = "estimator-workers"
version = "0.1.0"
description = "Python/Celery extraction pipeline workers for Estimator"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4",
    "python-dotenv>=1.0",
    "supabase>=2.10",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "Pillow>=11.0",
    "pillow-heif>=0.18",
    "fpdf2>=2.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["estimator_workers*"]
